src/actualbudget/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actualbudget
  namespace: actualbudget
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: { app: actualbudget }
  template:
    metadata:
      labels: { app: actualbudget }
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - stanley-arm1
                  - key: kubernetes.io/os
                    operator: In
                    values:
                      - linux
      containers:
        - name: actualbudget
          image: actualbudget/actual-server:26.4.0
          ports:
            - name: http
              containerPort: 5006
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: actualbudget-data
