src/actualbudget/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actualbudget
  namespace: actualbudget
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: ynab.vind.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: actualbudget
                port:
                  number: 5006
  tls:
    - hosts: [ynab.vind.uk]
      secretName: actualbudget-tls
